--- a/Demo/Demo.Domain/Demo.Domain.csproj
+++ b/Demo/Demo.Domain/Demo.Domain.csproj
@@ -38,6 +38,9 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Entity\Member.cs" />
+        <Compile Include="Enum\Sex.cs" />
+        <Compile Include="Interface\IGenericRepository.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
