--- a/Demo/Demo.Service/Demo.Service.csproj
+++ b/Demo/Demo.Service/Demo.Service.csproj
@@ -38,12 +38,17 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="MemberService.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Demo.DAL\Demo.DAL.csproj">
         <Project>{99c375ea-e9b3-4d41-a83f-ff4139863a96}</Project>
         <Name>Demo.DAL</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Demo.Domain\Demo.Domain.csproj">
+        <Project>{10dff6c6-baf2-4d4e-9a67-5067732e03a2}</Project>
+        <Name>Demo.Domain</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
