--- a/Demo/Demo.DAL/Demo.DAL.csproj
+++ b/Demo/Demo.DAL/Demo.DAL.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
     <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -32,13 +33,40 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
+        <Reference Include="System.ComponentModel.DataAnnotations" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="DemoContext.cs" />
+        <Compile Include="Migrations\202101161017294_Init.cs" />
+        <Compile Include="Migrations\202101161017294_Init.Designer.cs">
+          <DependentUpon>202101161017294_Init.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Migrations\202101161032344_AddMember.cs" />
+        <Compile Include="Migrations\202101161032344_AddMember.Designer.cs">
+          <DependentUpon>202101161032344_AddMember.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Migrations\202101161251380_AddProduct.cs" />
+        <Compile Include="Migrations\202101161251380_AddProduct.Designer.cs">
+          <DependentUpon>202101161251380_AddProduct.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Migrations\Configuration.cs" />
+        <Compile Include="ORMModel\Member.cs" />
+        <Compile Include="ORMModel\Product.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Repository\MemberRepository.cs" />
+        <Compile Include="SeekWork\EFContext.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Demo.Domain\Demo.Domain.csproj">
@@ -46,7 +74,30 @@
         <Name>Demo.Domain</Name>
       </ProjectReference>
     </ItemGroup>
+    <ItemGroup>
+      <None Include="App.config" />
+      <None Include="packages.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Include="Migrations\202101161017294_Init.resx">
+        <DependentUpon>202101161017294_Init.cs</DependentUpon>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Migrations\202101161032344_AddMember.resx">
+        <DependentUpon>202101161032344_AddMember.cs</DependentUpon>
+      </EmbeddedResource>
+      <EmbeddedResource Include="Migrations\202101161251380_AddProduct.resx">
+        <DependentUpon>202101161251380_AddProduct.cs</DependentUpon>
+      </EmbeddedResource>
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+      <PropertyGroup>
+        <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+      </PropertyGroup>
+      <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+      <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+    </Target>
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
